update my bogsite

--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
     <script src='app.js' type='module'></script>
   </head>
   <body>
-    <h1>Everett Bogue's Website</h1>
-    <div><a href='mailto:ev@evbogue.com'>ev@evbogue.com</a> | <a href='https://github.com/evbogue/'>Github</a>
+    <img src='./evsmall.jpg' style='width: 75px; height: 75px; object-fit: cover;' />
+    <h1>Everett Bogue's Homepage</h1>
+    <p>Hi! I'm Ev on the Internet. I live just outside of Chicago right now. I am best known for creating <a href='https://bogbook.com'>Bogbook</a>, a distributed social network. Here's my latest bog:</p>
     <div id='container'></div>
+
+    <p>You can post to Bogbook by typing into the text area and pressing the Send button. Retain your Keypair to publish using the same identity.</p>
+
+    <p>I have an email address: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>. I attempt to answer all email correspondence.</p>
+
+    <p>My phone number is: 773-510-8601. Leave a voice message with your name, how to get in touch with you, and your question.</p>
+
+    <p>I am most actively hosting my code on <a href='https://github.com/evbogue/'>Github</a>.</p>
+
+    <p>Here are my <a href='https://news.ycombinator.com/threads?id=evbogue'>hackernews threads</a>. I am also an active participant on <a href='https://www.threads.net/@everettbogue'>Facebook Threads</a></p>
   </body>
 </html>
