tweaks to my bogsite

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <p>You can post to Bogbook by typing into the text area and pressing the Send button. Retain your Keypair to publish using the same identity.</p>
 
-    <p>I have an email address: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>. I attempt to answer all email correspondence.</p>
+    <p>I have an email address: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>. You can reach out with any questions that you have an I will attempt to answer them.</p>
 
-    <p>My phone number is: 773-510-8601. Leave a voice message with your name, how to get in touch with you, and your question.</p>
+    <p>My phone number is: <a href='tel:7735108601'>773-510-8601</a>. Text or leave a voice message with your name, how to get in touch with you, and your question.</p>
 
     <p>I am most actively hosting my code on <a href='https://github.com/evbogue/'>Github</a>.</p>
 
-    <p>Here are my <a href='https://news.ycombinator.com/threads?id=evbogue'>hackernews threads</a>. I am also an active participant on <a href='https://www.threads.net/@everettbogue'>Facebook Threads</a></p>
+    <p>Here are my <a href='https://news.ycombinator.com/threads?id=evbogue'>hackernews threads</a>. I am a user of <a href='https://www.threads.net/@everettbogue'>Facebook Threads</a> and <a href='https://bsky.app/profile/evbogue.bsky.social'>Bluesky</a>.</p>
   </body>
 </html>
