--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <p>You can post to Bogbook by typing into the text area and pressing the Send button. Retain your Keypair to publish using the same identity.</p>
 
-    <p>I have an email address: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>. You can reach out with any questions that you have an I will attempt to answer them.</p>
+    <p>I have an email address: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>. You can reach out with any questions that you have and I will attempt to answer them.</p>
 
     <p>My phone number is: <a href='tel:7735108601'>773-510-8601</a>. Text or leave a voice message with your name, how to get in touch with you, and your question.</p>
 
