update bio and photo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src='app.js' type='module'></script>
   </head>
   <body>
-    <img src='./evsmall.jpg' style='width: 75px; height: 75px; object-fit: cover;' />
+    <img src='./evjetski.jpg' style='width: 75px; height: 75px; object-fit: cover;' />
     <h1>Everett Bogue's Homepage</h1>
     <p>Hi! I'm Ev on the Internet. I live just outside of Chicago right now. I am best known for creating <a href='https://bogbook.com'>Bogbook</a>, a distributed social network. Here's my latest bog:</p>
     <div id='container'></div>
 
-    <p>You can post to Bogbook by typing into the text area and pressing the Send button. Retain your Keypair to publish using the same identity.</p>
+    <p>You can post to Bogbook by typing into the text area and pressing the Send button. Retain your ed25519 keypair to publish using the same identity.</p>
 
     <p>I have an email address: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>. You can reach out with any questions that you have and I will attempt to answer them.</p>
 
@@ -23,6 +23,6 @@
 
     <p>I am most actively hosting my code on <a href='https://github.com/evbogue/'>Github</a>.</p>
 
-    <p>Here are my <a href='https://news.ycombinator.com/threads?id=evbogue'>hackernews threads</a>. I am a user of <a href='https://www.threads.net/@everettbogue'>Facebook Threads</a> and <a href='https://bsky.app/profile/evbogue.bsky.social'>Bluesky</a>.</p>
+    <p>Here are my <a href='https://news.ycombinator.com/threads?id=evbogue'>hackernews threads</a>.</p>
   </body>
 </html>
