--- a/index.html
+++ b/index.html
@@ -6,23 +6,43 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel='stylesheet' href='./fonts/source-sans-pro.css' type='text/css' />
     <link rel='stylesheet' href='style.css' type='text/css' />
-    <script src="./lib/marked.min.js"></script>
-    <script src='app.js' type='module'></script>
   </head>
   <body>
-    <img src='./evjetski.jpg' style='width: 75px; height: 75px; object-fit: cover;' />
-    <h1>Everett Bogue's Homepage</h1>
-    <p>Hi! I'm Ev on the Internet. I live just outside of Chicago right now. I am best known for creating <a href='https://bogbook.com'>Bogbook</a>, a distributed social network. Here's my latest bog:</p>
     <div id='container'></div>
+    <h1>Everett Bogue's Homepage</h1>
 
-    <p>You can post to Bogbook by typing into the text area and pressing the Send button. Retain your ed25519 keypair to publish using the same identity.</p>
-
-    <p>I have an email address: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>. You can reach out with any questions that you have and I will attempt to answer them.</p>
-
-    <p>My phone number is: <a href='tel:7735108601'>773-510-8601</a>. Text or leave a voice message with your name, how to get in touch with you, and your question.</p>
-
-    <p>I am most actively hosting my code on <a href='https://github.com/evbogue/'>Github</a>.</p>
-
-    <p>Here are my <a href='https://news.ycombinator.com/threads?id=evbogue'>hackernews threads</a>.</p>
+    <p>Hi! I'm Ev on the Internet. I live just outside of Chicago right now.</p>
+    <p>I am best known for creating <a href='https://wiredove.net'>Wiredove</a> a client for the <a href='https://bogbook.com'>Bogbook</a>, a distributed social network.</p>
+    <p>In the summer I'm a professional guide navigating kayakers down the Chicago River. In the winter I've implemented an automated algorithm for smart passive income while I work on planning my midlife crisis. I've recently been nominated the most genius programmer who doesn't currently work at a firm in the Chicago area.</p>
+    <ul>
+      <li>Hanover Park, Illinois, USA</li>
+      <li>Phone: <a href='tel:773-510-8601'>773-510-8601</a></li>
+      <li>Email: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>
+      <li>LinkedIn: <a href='https://www.linkedin.com/in/evbogue/'>evbogue</a></li>
+      <li>Github: <a href='https://github.com/evbogue/'>evbogue</a></li>
+      <li>Hackernews: <a href='https://news.ycombinator.com/threads?id=evbogue'>evbogue</a></li>
+    </ul>
+     
   </body>
+  <script type='module'>
+    import { h } from 'https://esm.sh/gh/evbogue/bogbookv4@6d2990fde7/lib/h.js'
+    import {embed} from 'https://esm.sh/gh/evbogue/bog-embed@4217ae51f0/mod.js'
+    const el = document.getElementById('container')
+    embed('EvEscFEThxeGbGnbMeDL0kHVhTZ/sJz1hN1e8qjZo8c=', el)
+
+    const input = h('input', {placeholder: 'Your phone or email please'})
+    const textarea = h('textarea', {placeholder: 'Send a message to my phone'})
+    const button = h('button', { onclick: () => {
+      if (textarea.value && input.value) {
+        fetch('https://ntfy.sh/evbogue', {
+          method: 'POST',
+          body: input.value + ' | ' + textarea.value
+        })
+        const got = document.getElementById('phonebuzz')
+        
+        got.replaceWith(h('div', ['Sent! I received a message: "' + input.value + ' | ' + textarea.value + '"']))
+      } else {alert('Fill out all fields plz')}
+    }}, ['Send urgent message'])
+    document.body.appendChild(h('div', {id: 'phonebuzz'}, [input, textarea, button]))
+  </script>
 </html>
