--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Everett Bogue's Homepage</h1>
 
     <p>Hi! I'm Ev on the Internet. I live just outside of Chicago right now.</p>
-    <p>I am best known for creating <a href='https://wiredove.net'>Wiredove</a> a client for the <a href='https://bogbook.com'>Bogbook</a>, a distributed social network.</p>
-    <p>In the summer I'm a professional guide navigating kayakers down the Chicago River. In the winter I've implemented an automated algorithm for smart passive income while I work on planning my midlife crisis. I've recently been nominated the most genius programmer who doesn't currently work at a firm in the Chicago area.</p>
+    <p>I am best known for creating <a href='https://wiredove.net'>Wiredove</a> a client for the <a href='https://bogbook.com'>Bogbook</a> protocol.</p>
+    <p>In the summer I guide kayakers down the Chicago River at <a href='https://urbankayaks.com'>Urban Kayaks</a>. In the winter I've implemented an automated algorithm for smart passive income while I work on planning my midlife crisis.</p><p>I've recently been nominated the most genius programmer who doesn't currently work at a firm in the Chicago area.</p>
     <ul>
       <li>Hanover Park, Illinois, USA</li>
       <li>Phone: <a href='tel:773-510-8601'>773-510-8601</a></li>
