--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
      
   </body>
   <script type='module'>
-    import { h } from 'https://esm.sh/gh/evbogue/bogbookv4@6d2990fde7/lib/h.js'
-    import {embed} from 'https://esm.sh/gh/evbogue/bog-embed@8290719d90/mod.js'
+    import { h } from 'https://esm.sh/gh/evbogue/bogbookv4@02f96a104e/lib/h.js'
+    import {embed} from 'https://esm.sh/gh/evbogue/bog-embed@8290719d90/mod.js/mod.js'
     const el = document.getElementById('container')
     embed('EvEscFEThxeGbGnbMeDL0kHVhTZ/sJz1hN1e8qjZo8c=', el)
 
