move app to app.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel='stylesheet' href='./fonts/source-sans-pro.css' type='text/css' />
     <link rel='stylesheet' href='style.css' type='text/css' />
+    <script type='module' src='app.js'></script>
   </head>
   <body>
     <h1>Everett Bogue's Homepage</h1>
@@ -28,28 +29,5 @@
       <li>Github: <a href='https://github.com/evbogue/'>evbogue</a></li>
       <li>Hackernews: <a href='https://news.ycombinator.com/threads?id=evbogue'>evbogue</a></li>
     </ul>
-     
   </body>
-  <script type='module'>
-    import { h } from 'https://esm.sh/gh/evbogue/bogbookv4@02f96a104e/lib/h.js'
-    import {embed} from 'https://esm.sh/gh/evbogue/bog-embed@e413bc1f06/mod.js'
-    const el = h('div')
-    document.body.insertBefore(el, document.body.firstChild)
-    embed('EvEscFEThxeGbGnbMeDL0kHVhTZ/sJz1hN1e8qjZo8c=', el)
-
-    const input = h('input', {placeholder: 'Your phone or email please'})
-    const textarea = h('textarea', {placeholder: 'Send a message to my phone'})
-    const button = h('button', { onclick: () => {
-      if (textarea.value && input.value) {
-        fetch('https://ntfy.sh/evbogue', {
-          method: 'POST',
-          body: input.value + ' | ' + textarea.value
-        })
-        const got = document.getElementById('phonebuzz')
-        
-        got.replaceWith(h('div', ['Sent! I received a message: "' + input.value + ' | ' + textarea.value + '"']))
-      } else {alert('Fill out all fields plz')}
-    }}, ['Send urgent message'])
-    document.body.appendChild(h('div', {id: 'phonebuzz'}, [input, textarea, button]))
-  </script>
 </html>
