--- a/index.html
+++ b/index.html
@@ -14,18 +14,14 @@
     <p>Hi! I'm Ev on the Internet. I live just outside of Chicago right now.</p>
     <p>I am best known for creating <a href='https://wiredove.net'>Wiredove</a> a client for the <a href='https://bogbook.com'>Bogbook</a> protocol.</p> 
     <p>I'm a frequent presenter on JavaScript in Chicago. My latest talk was about <a href='https://www.youtube.com/watch?v=ntDwXNrU-T0'>How to Create an HDA with HTMX</a> [Youtube]. Thank you to <a href="https://www.bitovi.com/">Bitovi</a> for hosting me at <a href="https://www.meetup.com/js-chi/">JS.CHI</a> two times within the span of one year! And for all of the laughs.</p> 
-    <p>I've recently been nominated the most genius programmer who doesn't currently work at a firm in the Chicago area.</p>
     <p>In the summer I guide kayakers down the Chicago River at <a href='https://urbankayaks.com'>Urban Kayaks</a>. In the winter I've implemented an automated algorithm for smart passive income while I plan my midlife crisis.</p>
 
     <ul>
-      <li>Est. Chicago March, 1985</li>
-      <li>Height: 5'11"</li>
-      <li>Eyes: Hazel</li>
-      <li>Favorite color: Brat</li>
-      <li>Location: Hanover Park, Illinois, USA</li>
+      <li>Location: Greater Chicago Area, Illinois, USA</li>
       <li>Phone: <a href='tel:773-510-8601'>773-510-8601</a></li>
       <li>Email: <a href='mailto:ev@evbogue.com'>ev@evbogue.com</a>
       <li>LinkedIn: <a href='https://www.linkedin.com/in/evbogue/'>evbogue</a></li>
+      <li>Bluesky: <a href='https://bsky.app/profile/evbogue.com'>evbogue.com</a></li>
       <li>Github: <a href='https://github.com/evbogue/'>evbogue</a></li>
       <li>Hackernews: <a href='https://news.ycombinator.com/threads?id=evbogue'>evbogue</a></li>
     </ul>
